@@ -1,3 +1,6 @@
+[CW37]
+* SoftButtons, PerformInteraction, Show, SetGlobalProperties dialogs: change default imageFilename.png to action.png.
+
 [CW36]
 * Automatically attempt to reconnect to SDLCore after disconnect.
 
